Правки внесены, протестированы все эндпоинты для user и profile Всё работает в штатном, задуманном режиме